--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2",
+    "razorpay": "^2.9.6",
     "sharp": "^0.34.2",
     "tailwindcss": "^4.1.10"
   },
