--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "chart.js": "^4.5.0",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
